try to fix using x64 proc

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -6,6 +6,7 @@
     <RuntimeFrameworkVersion>3.1</RuntimeFrameworkVersion>
     <UseWPF>true</UseWPF>
     <CodeAnalysisRuleSet>..\.sonarlint\wpfapp1_checkcsharp.ruleset</CodeAnalysisRuleSet>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
